overflow issue fixed in experience component

--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -10,6 +10,7 @@
     height: 80vh;
     padding: 60px 20px;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .experience-header-container.visible {
